# c-plus-plus

./: README.md  containers.md  loop.md
advances/inline/: readme.md
advances/template/: readme.md
basics/: LinkedList.cpp  common_functions.md  constructor_and_destructor.md  containers.md  cout.md  data_types.md  header.md  loop.md  loop_if.md  pointer.md  pointer_reference.md  scope-resolution-operator.md  struct_class.md  timer.md
caffe/: 0-caffe_cpu_installation.md  0-caffe_gpu_installation.md  1-dependencies.md  dependencies.md  readme.md
caffe/1-data/blob/: CMakeLists.txt  main.cpp  run_me.sh
caffe/1-data/datumAndBlob/: CMakeLists.txt  rum_me.sh
caffe/1-hello-world/: readme.md
caffe/1-hellocaffe/: CMakeLists.txt  hellocaffe.cpp  main.cpp  run.cmd
caffe/10-caffeCpuMse/: main.cpp  readme.md
caffe/11-addNewLayersToCaffe/: CMakeLists.txt
caffe/2-dependencies/: readme.md
caffe/2-dependencies/2-1-gflags_glog_example/: CMakeLists.txt  run.cmd
caffe/2-gflags-example/: CMakeLists.txt  main.cpp  trainlist.txt
caffe/2-gflags_glog_example/: main.cpp
caffe/3-convert_imageset/: CMakeLists.txt  convert_imageset.cpp  run_win.cmd
caffe/3-convert_imageset/data/: generate_img_list.py  img_list.txt
caffe/3-convert_imageset/data/img_lmdb/: data.mdb  lock.mdb
caffe/3-glog_example/: CMakeLists.txt  main.cpp
caffe/4-classification/classification_inference/: readme.md
caffe/4-classification/mnist_classification/models/: deploy.prototxt
caffe/4-mnist_classification/: test.cmd  test.sh  train.cmd  train.sh
caffe/4-mnist_classification/data/: generate_img_list.py  label2words.txt
caffe/4-mnist_classification/models/: solver.prototxt  train_val.prototxt
caffe/6-prototxt_definition/: readme.md
caffe/7-readAndWriteImgViaCaffeBlob/: CMakeLists.txt  main.cpp  run_me.sh
caffe/7-readAndWriteImgViaCaffeBlob/models/: deploy.prototxt
caffe/8-layers/euclidean_loss_layer/: CMakeLists.txt  main.cpp  readme.md  run_me.sh
caffe/8-layers/sigmoid_layer/: CMakeLists.txt  main.cpp  run_me.sh
caffe/8-mseErrorViaCaffe/: CMakeLists.txt  main.cpp  run_me.sh
caffe/9-datumAndBlob/: main.cpp
caffe/9-modifyCaffe/addNewFunctionsToCaffe/: CMakeLists.txt  readme.md  run_me.sh
caffe/9-modifyCaffe/addNewLayersToCaffe/: main.cpp  readme.md
cmake/: basics.md  cmake.md  cmake.pd  install_cmake.md  readme.md
cmake/examples/: loop-and-file-operation.md
cmake/examples/caffe_examples/: main.cpp
cmake/examples/print_hello_world/: CMakeLists.txt  readme.md
cmake/examples/print_hello_world/include/: Hello.h
cmake/examples/print_hello_world/include/static/: Hello.h
cmake/examples/print_hello_world/src/: Hello.cpp  main.cpp
cmake/examples/read_txt/: CMakeLists.txt  compile.sh  main.cpp  matrix.txt  trainlist.txt
deep-learning/: libtorch.md  linearRegression.cpp  opencv.md
deep-learning/custom-dataset/: CMakeLists.txt  custom-dataset.cpp  info.txt  readme.md
leetcode/: dynamic-programming.md  linkedlist.md  top-100-liked-questions.md
opencv/: 0-installation.md  readme.md
opencv/1-object-detection/: main.cpp
