cmake_minimum_required(VERSION 2.8.8)
include("C:/Users/suzy/.caffe/dependencies/libraries_v140_x64_py27_1.1.0/libraries/caffe-builder-config.cmake")
set(Caffe_DIR "F:/libcaffe/caffe/build")
find_package(Caffe)
if (Caffe_FOUND)
    message(Caffe_DIR: ${Caffe_DIR})
else ()
    message(FATAL_ERROR "Caffe not found!")
endif ()
project(euclidean_loss_layer_proj)
link_directories("F:/libcaffe/caffe/build/lib/Release")

set(Caffe_INCLUDE_DIRS "F:/libcaffe/caffe/build/include" "F:/libcaffe/caffe/build" "F:/libcaffe/caffe/include")
include_directories(${Caffe_INCLUDE_DIRS})
add_executable(euclidean_loss_layer main.cpp)
target_link_libraries(euclidean_loss_layer ${Caffe_LIBRARIES})

set(Caffe_DLL_DIR "F:/libcaffe/caffe/build/install/bin/")
file(COPY ${Caffe_DLL_DIR} DESTINATION Release)