cmake_minimum_required(VERSION 2.8.8)
project(caffeCpuMse_proj)
include("C:/Users/suzy/.caffe/dependencies/libraries_v140_x64_py27_1.1.0/libraries/caffe-builder-config.cmake")
find_package(Caffe)
set(Caffe_DIR "F:/caffe/build")
if(Caffe_FOUND)
    message("caffe found at path: ${Caffe_DIR}.")
    set(Caffe_DIR "F:/caffe/build")
else()
    message(FATAL_ERROR "caffe not found")
endif()
link_directories("F:/caffe/build/lib/Release")
set(Caffe_INCLUDE_DIRS "F:/caffe/build/include" "F:/caffe/build" "F:/caffe/src")
include_directories(${Caffe_INCLUDE_DIRS})
add_executable(caffeCpuMse main.cpp)
target_link_libraries(caffeCpuMse ${Caffe_LIBRARIES})

set(Caffe_DLL_DIR "F:/caffe/build/install/bin/")
file(COPY ${Caffe_DLL_DIR} DESTINATION Release)